suma de valores.

--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -56,7 +56,8 @@
         android:hint="@string/num_two"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtInput" />
+        app:layout_constraintTop_toBottomOf="@+id/txtInput"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/btnSuma"
